--- a/DoAnMon/Views/ClassRooms/Details.cshtml
+++ b/DoAnMon/Views/ClassRooms/Details.cshtml
@@ -768,7 +768,17 @@
 	<div class="tab" onclick="openTab(event, 'assignments')" style="font-family: Poppins, sans-serif;font-weight: 600">Bài tập</div>
 	<div class="tab" onclick="openTab(event, 'discussion')" style="font-family: Poppins, sans-serif;font-weight: 600">Thảo luận</div>
 	<div class="tab" onclick="openTab(event, 'listsv')" style="font-family: Poppins, sans-serif;font-weight: 600">Danh sách sinh viên</div>
-	<div class="tab" onclick="openTab(event, 'bangdiem')" style="font-family: Poppins, sans-serif;font-weight: 600">Bảng điểm</div>
+
+	@{
+		if (Model.CustomRubric == false)
+		{
+			<div class="tab" onclick="openTab(event, 'bangdiem')" style="font-family: Poppins, sans-serif;font-weight: 600">Bảng điểm</div>
+		}
+		else
+		{
+			<div class="tab" onclick="openTab(event, 'bangdiemCustom')" style="font-family: Poppins, sans-serif;font-weight: 600">Bảng điểm</div>
+		}
+	}
 	<div class="tab" onclick="openTab(event, 'padlet')" style="font-family: Poppins, sans-serif;font-weight: 600">Padlet</div>
 	<div class="tab" onclick="openTab(event, 'letter')" style="font-family: Poppins, sans-serif;font-weight: 600">Đơn từ</div>
 	<div class="tab" onclick="openTab(event, 'setting')" style="font-family: Poppins, sans-serif;font-weight: 600">Settings</div>
@@ -1035,9 +1045,6 @@
 		</div>
 	</div>
 </div>
-
-
-
 <div id="listsv" class="tabcontent">
 	@{
 		if (Model.isOwner)
@@ -1052,7 +1059,10 @@
 	<div id="listsv1">
 	</div>
 </div>
-<div id="bangdiem" class="tabcontent">
+@{
+	if (Model.CustomRubric == false)
+	{
+		<div id="bangdiem" class="tabcontent">
 	@{
 		List<BaiTap> bt = ViewBag.ListBT as List<BaiTap>;
 		List<DiemViewModel> diems = ViewBag.ListDiem as List<DiemViewModel>;
@@ -1098,6 +1108,14 @@
 		</table>
 	</div>
 </div>
+	}
+	else
+	{
+		<div id="bangdiemCustom" class="tabcontent">
+	<iframe style="border: none;" src="@Url.Action("Details", "Rubrics", new { id = Model.Rubric.Id, classRoomId = Model.ClassRoom.Id, isowner = Model.isOwner})" width="100%" height="600px"></iframe>
+</div>
+	}
+}
 <div id="padlet" class="tabcontent">
 	<div class="padlet-embed" style="border:1px solid rgba(0,0,0,0.1);border-radius:2px;box-sizing:border-box;overflow:hidden;position:relative;width:100%;background:#F4F4F4"><p style="padding:0;margin:0"><iframe src="https://padlet.com/embed/lup9um2r33899yju" frameborder="0" allow="camera;microphone;geolocation" style="width:100%;height:608px;display:block;padding:0;margin:0"></iframe></p><div style="display:flex;align-items:center;justify-content:end;margin:0;height:28px"><a href="https://padlet.com?ref=embed" style="display:block;flex-grow:0;margin:0;border:none;padding:0;text-decoration:none" target="_blank"><div style="display:flex;align-items:center;"><img src="https://padlet.net/embeds/made_with_padlet_2022.png" width="114" height="28" style="padding:0;margin:0;background:0 0;border:none;box-shadow:none" alt="Made with Padlet"></div></a></div></div>
 </div>
@@ -1142,8 +1160,6 @@
 			<!-- Cards will be dynamically added here -->
 		</div>
 	</div>
-
-
 
 </div>
 
