Sửa giao diện Admin, Thêm ngày nộp cho Đơn xin nghỉ phép. Thêm Quản lý rubric, sửa và xoá các criteria, tìm kiếm rubric

--- a/DoAnMon/Areas/Admin/Views/Home/DSbaipost.cshtml
+++ b/DoAnMon/Areas/Admin/Views/Home/DSbaipost.cshtml
@@ -186,7 +186,7 @@
         <div class="container-fluid">
 
 
-            @if (User.Identity.IsAuthenticated)
+           @*  @if (User.Identity.IsAuthenticated)
             {
                 <a class="navbar-brand" href="/" style="font-family: 'Poppins', sans-serif; padding: 0">
                     <img src="/images/Logo_Web.png" alt="Logo" width="70" height="auto">
@@ -199,8 +199,8 @@
                     <img src="/images/Logo_Web.png" alt="Logo" width="70" height="auto">
                 </a>
 
-            }
-            <a href="/Admin/Home/PhanQuyen" class="admin-link" style="margin-bottom:10px;">QUẢN LÍ NGƯỜI DÙNG</a>
+            } *@
+            @* <a href="/Admin/Home/PhanQuyen" class="admin-link" style="margin-bottom:10px;">QUẢN LÍ NGƯỜI DÙNG</a> *@
             <a href="/Admin/Home/baipost" class="admin-link" style="margin-bottom:10px;">TẠO BÀI POST</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
