--- a/DoAnMon/Areas/Admin/Views/Home/baipost.cshtml
+++ b/DoAnMon/Areas/Admin/Views/Home/baipost.cshtml
@@ -36,7 +36,11 @@
     <div id="container-fluid">
         <h1 contenteditable="true">Title bài viết</h1>
         <div id="editor"></div>
-        <button id="submit">POST</button>
+        <div style="display: flex; align-items: center">
+            <a class="btn btn-danger" href="/Admin/Home/DSbaipost">Quay lại</a>
+            <button id="submit">POST</button>
+        </div>
+        
         <div id="hide_content" style="display: none"></div>
     </div>
     <script src="https://cdn.ckeditor.com/ckeditor5/41.3.1/super-build/ckeditor.js"></script>
