--- a/DoAnMon/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/DoAnMon/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -11,6 +11,15 @@
 	<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 	<link rel="stylesheet" href="~/DoAnMon.styles.css" asp-append-version="true" />
 	<link rel="icon" type="image/x-icon" href="/images/Logo_Web.png" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+		  rel="stylesheet"
+		  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+		  crossorigin="anonymous" />
+	<link rel="stylesheet"
+		  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+		  integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+		  crossorigin="anonymous"
+		  referrerpolicy="no-referrer" />
 	<style>
 		/* Định dạng chung cho liên kết */
 		a.admin-link {
@@ -69,10 +78,10 @@
 		}
 
 		// Cập nhật thời gian mỗi giây
-		setInterval(updateDateTime, 1000);
+		// setInterval(updateDateTime, 1000);
 
 		// Gọi hàm updateDateTime lần đầu tiên để hiển thị thời gian ngay từ khi trang được tải
-		updateDateTime();
+		// updateDateTime();
 	</script>
 
 
