Cập nhật lại chỉnh sửa lớp học và cập nhật giao diện button cho upload bài giảng

--- a/DoAnMon/Views/ClassRooms/Index.cshtml
+++ b/DoAnMon/Views/ClassRooms/Index.cshtml
@@ -265,7 +265,7 @@
 
                 <div class="option">
                     <a href="/ClassRooms/Create" title="Create Classroom" style="text-decoration:none;">
-                        <p style="font-size: 16px; padding-left: 5px; color: black; margin: 0;">Tạo mới</p>
+                        <p style="font-size: 16px; padding-left: 5px; color: black; margin: 0;">Lớp học</p>
                     </a>
                 </div>
                 }
