--- a/DoAnMon/Views/ClassRooms/Details.cshtml
+++ b/DoAnMon/Views/ClassRooms/Details.cshtml
@@ -660,9 +660,156 @@
 .btn:hover{
 			background-color: lightgray;
 }
+</style>
 
-	
-	
+<style>
+	.button_btnBaiGiang {
+  position: relative;
+  width: 10rem;
+  height: 3rem;
+  cursor: pointer;
+  border: none;
+  background: none;
+}
+
+.button_btnBaiGiang svg {
+  width: 100%;
+  height: 100%;
+  overflow: visible;
+}
+
+.border_btnBaiGiang {
+  width: 100%;
+  height: 100%;
+  stroke: black;
+  stroke-width: 2px;
+  fill: #0000;
+  rx: 1em;
+  ry: 1em;
+  stroke-dasharray: 25;
+  transition: fill 0.25s;
+  animation: 4s linear infinite stroke-animation_btnBaiGiang;
+}
+
+.button_btnBaiGiang:hover .border_btnBaiGiang {
+  fill: #0001;
+}
+
+.button_btnBaiGiang:focus .border_btnBaiGiang {
+  transition: fill 0.25s 7.75s;
+  fill: #0000;
+}
+
+@@keyframes stroke-animation_btnBaiGiang {
+  0% {
+    stroke-dashoffset: 100;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+.txt-upload_btnBaiGiang {
+  position: absolute;
+  inset: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.txt-upload_btnBaiGiang::after {
+  content: "";
+}
+
+.button_btnBaiGiang:focus .rect_btnBaiGiang {
+  stroke-dasharray: 50;
+}
+
+.button_btnBaiGiang:focus .border_btnBaiGiang {
+  stroke: #0000;
+}
+
+.button_btnBaiGiang:focus .txt-upload_btnBaiGiang {
+  opacity: 0;
+  transition: opacity 0.25s 8s;
+}
+
+.button_btnBaiGiang:focus .txt-upload_btnBaiGiang::after {
+  animation: 0.66666s anim_btnBaiGiang step-end forwards,
+    1.33333s 0.6666s anim2_btnBaiGiang linear infinite alternate;
+}
+
+@@keyframes anim_btnBaiGiang {
+  0% {
+    content: "i";
+  }
+  50% {
+    content: "in";
+  }
+  to {
+    content: "ing";
+  }
+}
+
+@@keyframes anim2_btnBaiGiang {
+  0% {
+    content: "ing";
+  }
+  33% {
+    content: "ing.";
+  }
+  66% {
+    content: "ing..";
+  }
+  to {
+    content: "ing...";
+  }
+}
+
+.loading_btnBaiGiang {
+  width: 100%;
+  height: 100%;
+  stroke: #0055d4;
+  stroke-width: 2px;
+  fill: none;
+  rx: 1em;
+  ry: 1em;
+  stroke-dasharray: 0 100;
+  transition: stroke-dasharray 0.25s ease-out;
+}
+
+.button_btnBaiGiang:focus .loading_btnBaiGiang {
+  transition: stroke 0.5s 7.5s, stroke-dasharray 8s 0.5s ease-out;
+  stroke: #08ca08;
+  stroke-dasharray: 100 0;
+}
+
+.done_btnBaiGiang {
+  fill: none;
+  stroke: #000;
+  stroke-dasharray: 0 100;
+}
+
+.button_btnBaiGiang:focus .done-cloud_btnBaiGiang {
+  transition: stroke-dasharray 0.75s 8.5s ease-out;
+  stroke-dasharray: 100 0;
+}
+
+.button_btnBaiGiang:focus .done-check_btnBaiGiang {
+  transition: stroke-dasharray 0.5s 9.2s ease-out;
+  stroke: #08ca08;
+  stroke-dasharray: 100 0;
+}
+
+/* Trạng thái focus của button */
+.button_btnBaiGiang.focus .txt-upload_btnBaiGiang {
+	opacity: 0; /* Ẩn text Upload khi trong trạng thái focus */
+}
+
+.button_btnBaiGiang.focus .loading_btnBaiGiang {
+	stroke-dasharray: 100 0; /* Hiển thị thanh tiến trình */
+}
+
 </style>
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -803,8 +950,24 @@
 		if (Model.isOwner)
 		{
 								<div>
-									<button id="browseBaiGiang">Chọn File BAIGIANG</button>
-									<div id="progressBar"></div>
+									<button id="browseBaiGiang" class="button_btnBaiGiang">
+										<svg xmlns="http://www.w3.org/2000/svg">
+											<rect class="border_btnBaiGiang" pathLength="100"></rect>
+											<rect class="loading_btnBaiGiang" id="progressBar_btnBaiGiang" pathLength="100"></rect>
+
+											<svg class="done-svg_btnBaiGiang"
+												 xmlns="http://www.w3.org/2000/svg"
+												 viewBox="0 0 24 24">
+												<path class="done_btnBaiGiang done-cloud_btnBaiGiang"
+													  pathLength="100"
+													  d="M 6.5,20 Q 4.22,20 2.61,18.43 1,16.85 1,14.58 1,12.63 2.17,11.1 3.35,9.57 5.25,9.15 5.88,6.85 7.75,5.43 9.63,4 12,4 14.93,4 16.96,6.04 19,8.07 19,11 q 1.73,0.2 2.86,1.5 1.14,1.28 1.14,3 0,1.88 -1.31,3.19 Q 20.38,20 18.5,20 Z"></path>
+												<path class="done_btnBaiGiang done-check_btnBaiGiang"
+													  pathLength="100"
+													  d="M 7.515,12.74 10.34143,15.563569 15.275,10.625"></path>
+											</svg>
+										</svg>
+										<div class="txt-upload_btnBaiGiang">Upload</div>
+									</button>
 								</div>
 
 		}
@@ -1626,7 +1789,7 @@
 			// N?u tùy ch?n "allfile" du?c ch?n, không c?n ki?m tra d?nh d?ng file
 			if (fileName === '') {
 				// N?u không ch?n file, hi?n th? thông báo l?i
-				alert("Vui lòng ch?n m?t file d? n?p.");
+				alert("Vui lòng chọn 1 file để nộp.");
 				return false; // Ngan form du?c g?i di
 			}
 			// N?u dã ch?n file, cho phép form du?c g?i di
@@ -2229,6 +2392,14 @@
 
 		// Lắng nghe sự kiện khi file được thêm và bắt đầu upload
 		r.on('fileAdded', function (file) {
+			// Kiểm tra định dạng file
+			var fileExtension = file.fileName.split('.').pop().toLowerCase();
+			if (fileExtension !== 'pdf') {
+				alert("Chỉ được phép upload file PDF. Upload bị hủy.");
+				r.removeFile(file); // Loại bỏ file không hợp lệ khỏi danh sách
+				return;
+			}
+
 			console.log('Bắt đầu upload file:', file.fileName);
 			r.upload(); // Bắt đầu upload
 		});
@@ -2248,15 +2419,50 @@
 
 	// Lắng nghe tiến trình upload
 	r.on('fileProgress', function (file) {
-		var progress = Math.floor(file.progress() * 100); // Sử dụng file.progress() thay vì r.progress()
+		var progress = Math.floor(file.progress() * 100);
 		document.getElementById('progressBar').innerText = 'Tiến trình: ' + progress + '%';
+		const progressBar = document.getElementById('progressBar_btnBaiGiang');
+		const txtUpload = document.querySelector('.txt-upload_btnBaiGiang');
+		const borderbtn = document.querySelector('.border_btnBaiGiang');
+
+		setTimeout(() => {
+			txtUpload.innerText = 'Uploading...';
+		}, 1000);
+		// Cập nhật viền xanh theo tiến trình
+		if (progressBar) {
+			borderbtn.style.display = 'none';
+			progressBar.style.strokeDasharray = `${progress} ${100 - progress}`;
+			txtUpload.innerText = progress + '%';
+		}
 	});
 
 	// Xử lý khi hoàn thành upload
 	r.on('fileSuccess', function (file, message) {
 		console.log('Hoàn thành upload file:', file.fileName);
+		const progressBar = document.getElementById('progressBar_btnBaiGiang');
+		const button = document.querySelector('.button_btnBaiGiang');
+		const txtUpload = document.querySelector('.txt-upload_btnBaiGiang');
+		const borderbtn = document.querySelector('.border_btnBaiGiang');
+
+		// Đặt stroke-dasharray thành 100% khi hoàn thành
+		if (progressBar) {
+			progressBar.style.strokeDasharray = `100 0`;
+			txtUpload.innerText = 'Hoàn thành';
+		}
+		
 		resetFileName()
-		reloadLecture()
+		// Chờ 2 giây trước khi reload lecture
+		setTimeout(() => {
+			reloadLecture();
+			// Đặt lại trạng thái button về mặc định
+			if (button && txtUpload) {
+				button.classList.remove('focus'); // Xóa trạng thái focus nếu có
+				borderbtn.style.display = 'block';
+				txtUpload.innerText = 'Upload';
+				txtUpload.style.opacity = '1'; // Hiển thị lại text "Upload"
+				progressBar.style.strokeDasharray = `0 100`; // Reset progress bar
+			}
+		}, 2000); 
 	});
 
 	// Xử lý lỗi
@@ -2507,8 +2713,6 @@ function submitLeaveRequest(event) {
 				}
 			});
 	}
-
-
 
 	document.addEventListener('DOMContentLoaded', function () {
 		getAllLeaveRequests(); // Call function when the page loads
