--- a/DoAnMon/Views/ClassRooms/Details.cshtml
+++ b/DoAnMon/Views/ClassRooms/Details.cshtml
@@ -981,66 +981,63 @@
 	@{
 		if (Model.isOwner)
 		{
-													<button id="uploadButton" onclick="Showtaobaitap()"
-															style="
-																								background-color: #3498db;
-																								font-family: Poppins, sans-serif;
-																								color: #ffffff;
-																								padding: 10px 20px;
-																								border: none;
-																								border-radius: 5px;
-																								cursor: pointer;
-																								transition: background-color 0.3s;
-																								font-size: 15px;
-																								font-weight: bold;">
-														Tạo bài tập mới
-													</button>
-													<form id="uploadbaitap" action="/ClassRooms/CreateBaitap" method="POST" style="display: none;">
-														<div class="form-section">
-															<!-- Ph?n nh?p tiêu d? -->
-															<input type="text" name="Title" id="titleInput" class="form-control" placeholder="Nhập tiêu đề">
-															<!-- G?ch ngang -->
-															<hr>
-															<!-- Ph?n nh?p mô t? -->
-															<textarea name="Content" id="descriptionInput" class="form-control" placeholder="Nhập mô tả"></textarea>
-															<label for="deadlineInput">Hạn nộp:</label>
-															<input type="datetime-local" name="Deadline" id="deadlineInput" class="form-control">
+			<button id="uploadButton" onclick="Showtaobaitap()"
+					style="
+							background-color: #3498db;
+							font-family: Poppins, sans-serif;
+							color: #ffffff;
+							padding: 10px 20px;
+							border: none;
+							border-radius: 5px;
+							cursor: pointer;
+							transition: background-color 0.3s;
+							font-size: 15px;
+							font-weight: bold;">
+				Tạo bài tập mới
+			</button>
+			<form id="uploadbaitap" action="/ClassRooms/CreateBaitap" method="POST" style="display: none;">
+				<div class="form-section">
+					<!-- Ph?n nh?p tiêu d? -->
+					<input type="text" name="Title" id="titleInput" class="form-control" placeholder="Nhập tiêu đề">
+					<!-- G?ch ngang -->
+					<hr>
+					<!-- Ph?n nh?p mô t? -->
+					<textarea name="Content" id="descriptionInput" class="form-control" placeholder="Nhập mô tả"></textarea>
+					<label for="deadlineInput">Hạn nộp:</label>
+					<input type="datetime-local" name="Deadline" id="deadlineInput" class="form-control">
 
-															<label for="fileFormatSelect">Chọn định dạng file cần nộp:</label>
-															<select name="FileFormat" id="fileFormatSelect">
-																<option value="pdf">pdf</option>
-																<option value="docx">docx</option>
-																<option value="xlsx">xls</option>
-																<option value="allfile">all file</option>
-																<!-- Thêm các lo?i d?nh d?ng khác n?u c?n -->
-															</select>
+					<label for="fileFormatSelect">Chọn định dạng file cần nộp:</label>
+					<select name="FileFormat" id="fileFormatSelect">
+						<option value="pdf">pdf</option>
+						<option value="docx">docx</option>
+						<option value="xlsx">xls</option>
+						<option value="allfile">all file</option>
+					</select>
 
-														</div>
-									<input type="hidden" name="ClassId" id="classIdInput" value="@Model.ClassRoom.Id">
-									<label for="fileInput">Hướng dẫn (Nếu có): </label>
-									<input type="file" name="FileUpLoad" id="fileInput" /> <!-- ?n input file -->
-									<input type="hidden" name="AttactURL" id="attactURL">
-									<button type="button" onclick="uploadFile()">Upload</button>
-
-									<div class="modal" id="uploadModal" style="background-color: transparent;">
-										<div class="modal-content">
-											<div class="modal-header">
-												<h5 class="modal-title">Uploading File</h5>
-											</div>
-											<div class="modal-body text-center">
-												<div class="loader" id="loader" style="display: block;"></div>
-												<progress id="progressBar" value="0" max="100" style="display: none;"></progress>
-												<div id="progressText" style="display: block;" class="mt-3">0%</div>
-												<div id="successText" class="mt-3" style="display: none;">Upload thành công</div>
-											</div>
-										</div>
-									</div>
-
-									<div class="modal-backdrop" id="modalBackdrop"></div>
+				</div>
+				<input type="hidden" name="ClassId" id="classIdInput" value="@Model.ClassRoom.Id">
+				<label for="fileInput">Hướng dẫn (Nếu có): </label>
+				<input type="hidden" name="AttactURL" id="attactURL">
+				<input type="file" name="FileUpLoad" id="fileInput" onchange="uploadFile()" />
 
 
-														<input type="submit" value="Giao bài" class="btn btn-primary"></input> <!-- Nút giao bài -->
-													</form>
+				<div class="modal" id="uploadModal" style="background-color: transparent;">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title">Uploading File...</h5>
+					</div>
+					<div class="modal-body text-center">
+						<div class="loader" id="loader" style="display: block;"></div>
+						<progress id="progressBar" value="0" max="100" style="display: none;"></progress>
+						<div id="progressText" style="display: block;" class="mt-3">0%</div>
+						<div id="successText" class="mt-3" style="display: none;">Upload thành công</div>
+					</div>
+				</div>
+				</div>
+
+				<div class="modal-backdrop" id="modalBackdrop"></div>
+				<input type="submit" value="Giao bài" class="btn btn-primary"></input> <!-- Nút giao bài -->
+			</form>
 		}
 	}
 	<div class="assignments">
@@ -1064,7 +1061,7 @@
 						}
 						else
 						{
-																	<p class="assignment-description">Hạn nộp: Vô thời hạn</p>
+							<p class="assignment-description">Hạn nộp: Vô thời hạn</p>
 						}
 					}
 
