Fix lỗi upload cho bài giảng, sửa lại cho bài giảng hiển thị từ mới nhất đến cũ nhất

--- a/DoAnMon/Views/ClassRooms/_lecturePartial.cshtml
+++ b/DoAnMon/Views/ClassRooms/_lecturePartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<DoAnMon.Models.BaiGiang>
 
 @{
-    var lectures = Model != null ? Model.ToList() : new List<BaiGiang>();
+    var lectures = Model != null ? Model.OrderBy(p => p.Id).ToList() : new List<BaiGiang>();
     var totalCount = lectures.Count;
     bool isOwner = ViewBag.Isowner;
 }
