--- a/DoAnMon/Views/ClassRooms/Details.cshtml
+++ b/DoAnMon/Views/ClassRooms/Details.cshtml
@@ -2373,7 +2373,7 @@
 <script>
 	// Tạo đối tượng Resumable.js
 	var r = new Resumable({
-		target: '/upload',
+		target: '/upload/UploadChunk',
 		chunkSize: 1 * 1024 * 1024, // 1MB mỗi chunk
 		simultaneousUploads: 3,
 		testChunks: true,
