--- a/DoAnMon/Views/ClassRooms/_EditClassroom.cshtml
+++ b/DoAnMon/Views/ClassRooms/_EditClassroom.cshtml
@@ -1,9 +1,7 @@
 ﻿@using DoAnMon.ViewModels
- @model EditClassRoomViewModel
+@model EditClassRoomViewModel
 
-<h2>Chỉnh sửa lớp học</h2>
-
-<form asp-action="Edit1">
+<form id="editClassRoomForm">
     <input type="hidden" asp-for="Id" />
 
     <div class="form-group">
@@ -42,7 +40,6 @@
                 <label class="form-check-label">@day</label>
             </div>
         }
-        <span asp-validation-for="DaysOfWeek" class="text-danger"></span>
     </div>
 
     <div class="form-group">
@@ -57,6 +54,6 @@
         <span asp-validation-for="EndTime" class="text-danger"></span>
     </div>
 
-    <button type="submit" class="btn btn-primary">Save</button>
+    <button type="button" class="btn btn-primary" id="saveButton">Save</button>
 </form>
 
